target-group.tf
resource "aws_lb_target_group" "tg" {
  name     = "three-tier-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path = "/"
    port = "traffic-port"
  }

  tags = {
    Name = "three-tier-target-group"
  }
}
